tests/neg/parser-stability-12.scala
trait x0[]:  // error
     trait x1[x1 <:x0] // error: type x0 takes type parameters
     extends x1[  // error
// error